# gnnet24

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  run.py  run_experiments.sh
code/: run.py  run.sh
code/gnnet24/: __init__.py  dataset.py  main.py
code/gnnet24/dataset/: __init__.py  transform.py
code/gnnet24/models/: __init__.py
code/gnnet24/models/attri2vec/: __init__.py  attri2vec.py  main.py
code/gnnet24/models/daagc/: __init__.py  daagc.py
code/gnnet24/models/daegc/: __init__.py  daegc.py  layer.py  main.py  preprocess.py  pretrain.py  train.py
code/gnnet24/utils/: __init__.py  convert.py  early_stop.py  evaluate.py  grid_search.py  hungarian.py  loader.py  metrics.py  split.py  temporal.py  tgc.py  transform.py  utg.py  utils.py
code/models/attri2vec/: attri2vec.py  main.py
code/models/daegc/: daegc.py  main.py
code/models/dynnode2vec/: graph.py  main.py
code/models/gat/: gat.py
code/models/kmeans/: main.py
code/models/leiden/: main.py
code/models/node2vec/: alias.py  cpu.py  main.py
code/models/spectral/: __init__.py  main.py  spectral.py
code/models/tgc/: requirements.txt
code/models/tnodeembed/: main.py  metrics.py
code/models/utils/: abc.py  data.py  earlystop.py  evaluate.py  grid_search.py  mask.py
code/params/: daegc.json  node2vec.json  tgc.json
data/arxivai/raw/: edge_index.npz  time.npz  y.npz
data/brain/raw/: edge_index.npz  time.npz  y.npz
data/dblp/raw/: edge_index.npz  time.npz  y.npz
data/karateclub-nx/raw/: time.npz  x.npz  y.npz
data/karateclub-pyg/raw/: edge_index.npz  x.npz  y.npy
data/patent/raw/: edge_index.npz  time.npz  y.npz
data/pubmed/raw/: edge_index.npz  split.npz  time.npz  y.npz
data/school/raw/: edge_index.npz  time.npz  y.npz
params/: daegc.json  kmeans.json  node2vec.json  tgc.json
(+54 files in other folders)
